Syncing files to laptop

--- a/signup-modal/login.html
+++ b/signup-modal/login.html
@@ -13,6 +13,21 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 	<link rel="stylesheet" type="text/css" href="login.css">
 	<script type="text/javascript" src="./login.js"></script>
+
+	<!-- Navigation Bar -->
+	<nav class="navbar navbar-expand-sm bg-info navbar-dark">
+		<ul class="navbar-nav">
+			<li class="nav-item active">
+				<a class="nav-link" href="../mypage_bootstrap.html">Profile</a>
+			</li>
+			<li class="nav-item active">
+				<a class="nav-link" href="./login.html">Sign Up Modal</a>
+			</li>
+			<li class="nav-item active">
+				<a class="nav-link" href="../tic-tac-toe/tic-tac-toe.html">Tic Tac Toe Game</a>
+			</li>
+		</ul>
+	</nav>
 </head>
 
 <body>
